--- a/AAPM_SITE/produtos.html
+++ b/AAPM_SITE/produtos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AAPM - PRODUTOS</title>
+    <link rel="shortcut icon" href="img/Logo AAPM.png" width="60" height="60"type="image/x-icon">
     <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
@@ -93,110 +94,168 @@
             </tr>
 
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/APONTADOR-DEPOSITO.webp"  alt=""></th>
                 <th>APONTADOR C/ DEPOSITO - CIS</th>
                 <th>R$1.50</th>
                 <th>R$1.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/bloco-fichrio.jpg"  alt=""></th>
                 <th>BLOCO PARA FICHÁRIO BRANCO - 90 FL</th>
                 <th>R$3.50</th>
                 <th>R$3.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/Borracha-Mercurio.jpg"  alt=""></th>
                 <th>BORRACHA BRANCA MERCUR 40</th>
                 <th>R$1.00</th>
                 <th>R$0.50</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/borracha_mercur_clean_verde.webp"  alt=""></th>
                 <th>BORRACHA MERCUR VERDE CLEAN</th>
                 <th>R$1.50</th>
                 <th>R$1.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/cadeado.jpg"  alt=""></th>
                 <th>Cadeado 25mm</th>
                 <th>R$20.00	</th>
                 <th>R$20.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/caneta-bic.jfif"  alt=""></th>
                 <th>CANETA BIC CRISTAL - AZUL/ PRETA/ VERM</th>
                 <th>R$1.50</th>
                 <th>R$1.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/caneta-bic-fina.webp"  alt=""></th>
                 <th>CANETA BIC FINE - AZUL/ PRETA</th>
                 <th>R$1.50</th>
                 <th>R$1.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/Compasso.png"  alt=""></th>
                 <th>COMPASSO</th>
                 <th>R$10.00</th>
                 <th>R$8.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/fita-durex.jpeg"  alt=""></th>
                 <th>DUREX</th>
                 <th>R$1.00</th>
                 <th>R$0.50</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/estojo-AAPM2.jpg"  alt=""></th>
                 <th>ESTOJO AAPM </th>
                 <th>R$10.00</th>
                 <th>R$7.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/papel-milimetrado.jpg"  alt=""></th>
                 <th>FOLHA MILIMETRADA A4 - KIT COM 10 FL</th>
                 <th>R$1.00</th>
                 <th>R$0.50</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/ESQUADRO-60.webp"  alt=""></th>
                 <th>ESQUADRO 60</th>
                 <th>R$6.00</th>
                 <th>R$5.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/GRAFITE 0,5 2B BIG TREE.png"  alt=""></th>
                 <th>GRAFITE 0,5 2B BIG TREE</th>
                 <th>R$1.50</th>
                 <th>R$1.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/grafite_0.7.png"  alt=""></th>
                 <th>GRAFITE 0,7 HB FABER CASTELL</th>
                 <th>R$3.00</th>
                 <th>R$2.50</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/grafite-compasso.jfif"  alt=""></th>
                 <th>GRAFITE PARA COMPASSO</th>
                 <th>R$3.50</th>
                 <th>R$3.00</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
+                <th><img src="img/Lapis-comum.jpg"  alt=""></th>
                 <th>LÁPIS COMUM</th>
                 <th>R$10.00</th>
                 <th>R$15.50</th>
             </tr>
             <tr>
-                <th><img src="img/touca_soldador.webp"  alt=""></th>
-                <th>TOUCA P/ SOLDA</th>
+                <th><img src="img/LÁPIS 2B FABER CASTELL.webp"  alt=""></th>
+                <th>LÁPIS 2B FABER CASTELL</th>
+                <th>R$2.00</th>
+                <th>R$1.50</th>
+            </tr>
+            <tr>
+                <th><img src="img/PAPEL ALMAÇO.webp"  alt=""></th>
+                <th>PAPEL ALMAÇO</th>
+                <th>R$0.25</th>
+                <th>R$0.10</th>
+            </tr>
+            <tr>
+                <th><img src="img/PASTA CATÁLOGO 50 ENVELOPES.jfif"  alt=""></th>
+                <th>PASTA CATÁLOGO 50 ENVELOPES</th>
+                <th>R$6.00</th>
+                <th>R$4.00</th>
+            </tr>
+            <tr>
+                <th><img src="img/REFIL CANETA BORRACHA MERCUR.jpg"  alt=""></th>
+                <th>REFIL CANETA BORRACHA MERCUR</th>
+                <th>R$1.00</th>
+                <th>R$0.50</th>
+            </tr>
+            <tr>
+                <th><img src="img/RÉGUA 30CM.jfif"  alt=""></th>
+                <th>RÉGUA 30CM</th>
+                <th>R$3.00</th>
+                <th>R$2.50</th>
+            </tr>
+            <tr>
+                <th><img src="img/TRANSFERIDOR.webp"  alt=""></th>
+                <th>TRANSFERIDOR</th>
+                <th>R$4.00</th>
+                <th>R$3.50</th>
+            </tr>
+            <tr>
+                <th><img src="img/Jaleco.jpg"  alt=""></th>
+                <th>Jaleco</th>
+                <th>R$15.00</th>
                 <th>R$10.00</th>
-                <th>R$15.50</th>
+            </tr>
+            <tr>
+                <th><img src="img/Calculadora.jpg"  alt=""></th>
+                <th>Calculadora</th>
+                <th>R$45.00</th>
+                <th>R$40.00</th>
+            </tr>
+            <tr>
+                <th><img src="img/ALUGUEL DE ARMARIO.webp"  alt=""></th>
+                <th>ALUGUEL DE ARMARIO</th>
+                <th>R$50.00</th>
+                <th></th>
+            </tr>
+            <tr>
+                <th><img src="img/WI-FI.png"  alt=""></th>
+                <th>WI-FI</th>
+                <th>R$40.00</th>
+                <th></th>
             </tr>
         </table>
     </div>
     
-    
+    <footer id="copyright">
+        <div class="rodape">
+            <p> &#169; 2023 - SENAI AAPM - Todos os direitos reservados-Segurança e privacidade </p>
+        </div>
+        </footer>
 </body>
 </html>
