--- a/AAPM_SITE/index.html
+++ b/AAPM_SITE/index.html
@@ -6,24 +6,38 @@
     <title>AAPM</title>
     <link rel="shortcut icon" href="img/Logo AAPM.png" width="60" height="60"type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-    <header id="cabecalho">
-        <div class="logo">
-            <img src="img/Logo AAPM.png" alt="" height="auto" width="100px">
-        </div>
-        <nav class="links">
-            <ul class="lista" >
-                <li class="item">
-                    <a href="https://drive.google.com/file/d/1sgqizDfy11KhmjaXojt8Qr8kFbGrnE6f/view?pli=1">Estatuto</a>
+  <nav class="navbar navbar-expand-lg bg-light border-bottom border-body">
+    <div class="container-fluid">
+        <a class="navbar-brand text-black" style="font-family: 'IM Fell Great Primer'; margin-left: 2%;" href="#">
+            <img src="img/Logo AAPM.png" alt="" height="auto" width="100px" class="d-inline-block">
+        </a>
+        <button class="navbar-toggler text-black" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text-black"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-1.2 " id="links">
+                <li class="nav-item ">
+                    <a class="nav-link active text-black"  aria-current="page" a href="index.html">Home</a>
                 </li>
-                <li class="item"><a href="produtos.html">Produtos</a></li>
-                <li class="item"><a href="#">Contribuição</a></li>
-                <li class="item"><a href="#">Eventos</a></li>
+                <li class="nav-item ">
+                    <a class="nav-link text-black" a href="produtos.html">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-black" target="_blank" href="https://drive.google.com/file/d/1sgqizDfy11KhmjaXojt8Qr8kFbGrnE6f/view?pli=1">Estatuto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-black" href="eventos.html">Eventos</a>
+                </li>
             </ul>
-        </nav>
-    </header>
-    <hr>
+        </div>
+    </div>
+</nav>
+
     <div id="capa">
         <img src="img/hr.png" height="auto" width="100%" alt="">
     </div>
@@ -47,10 +61,146 @@
             </div>    
         </div>
     </div>
+
+    <div class="contribuicao">
+        <div class="titulo-contribuicao">
+            <h1>Contribuição</h1>
+        </div>
+        <div class="conteudo-contribuicao">
+            
+
+            <div id="cards" class="chope">
+                <div class="row row-cols-1 row-cols-md-4 g-4 ">
+                    <div class="col">
+                        <div class="card bg-transparent">
+                        <img src="img/logo senai.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                         <h5 class="card-title text-danger text-center">Faça sua contribuição para AAPM</h5>
+                         <div class="container px-4 text-center">
+                            <div class="row gx-5">
+                              <div class="col">
+                               <div class="p-3"><a href="https://pag.ae/7ZWj55Q2Q"><button type="button"  class="btn btn-outline-danger">Link</button></a></div>
+                              </div>
+                              <div class="col">
+                                <div class="p-3"><p class="card-text text-end fs-5">R$85,00</p></div>
+                              </div>
+                              <div id="liveAlertPlaceholder"></div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card bg-transparent">
+                        <img src="img/camisa senai.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                         <h5 class="card-title text-danger text-center">Compre uma Camiseta – não-sócio</h5>
+                         <div class="container px-4 text-center">
+                            <div class="row gx-5">
+                              <div class="col">
+                               <div class="p-3"><a href="https://pag.ae/7ZWj7GGKu"><button type="button"  class="btn btn-outline-danger">Link</button></a></div>
+                              </div>
+                              <div class="col">
+                                <div class="p-3"><p class="card-text text-end fs-5">R$35,00</p></div>
+                              </div>
+                              <div id="liveAlertPlaceholder"></div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card bg-transparent">
+                        <img src="img/camisa senai.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                         <h5 class="card-title text-danger text-center">Compre uma Camiseta – sócio</h5>
+                         <div class="container px-4 text-center">
+                            <div class="row gx-5">
+                              <div class="col">
+                               <div class="p-3"><a href="https://pag.ae/7ZWj7GGKu"><button type="button"  class="btn btn-outline-danger">Link</button></a></div>
+                              </div>
+                              <div class="col">
+                                <div class="p-3"><p class="card-text text-end fs-5">R$30,00</p></div>
+                              </div>
+                              <div id="liveAlertPlaceholder"></div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card bg-transparent">
+                        <img src="img/vale transporte.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                         <h5 class="card-title text-danger text-center">Ajude um aluno com 50% do vale transporte por 1 mês</h5>
+                         <div class="container px-4 text-center">
+                            <div class="row gx-5">
+                              <div class="col">
+                               <div class="p-3"><a href="https://pag.ae/7ZWjfN4NP"><button type="button"  class="btn btn-outline-danger">Link</button></a></div>
+                              </div>
+                              <div class="col">
+                                <div class="p-3"><p class="card-text text-end fs-5">R$60,00</p></div>
+                              </div>
+                              <div id="liveAlertPlaceholder"></div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card bg-transparent">
+                        <img src="img/vale transporte.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                         <h5 class="card-title text-danger text-center">Ajude um aluno com 100% do vale transporte por 1 mês</h5>
+                         <div class="container px-4 text-center">
+                            <div class="row gx-5">
+                              <div class="col">
+                               <div class="p-3"><a href="https://pag.ae/7ZWjfN4NP"><button type="button"  class="btn btn-outline-danger">Link</button></a></div>
+                              </div>
+                              <div class="col">
+                                <div class="p-3"><p class="card-text text-end fs-5">R$120,00</p></div>
+                              </div>
+                              <div id="liveAlertPlaceholder"></div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card bg-transparent">
+                        <img src="img/psicopedagogo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                         <h5 class="card-title text-danger text-center">Ajude um aluno com 100% tratamento de psicopedagogo 1 mês</h5>
+                         <div class="container px-4 text-center">
+                            <div class="row gx-5">
+                              <div class="col">
+                               <div class="p-3"><a href="https://pag.ae/7ZWjj-fG8"><button type="button"  class="btn btn-outline-danger">Link</button></a></div>
+                              </div>
+                              <div class="col">
+                                <div class="p-3"><p class="card-text text-end fs-5">R$130,00</p></div>
+                              </div>
+                              <div id="liveAlertPlaceholder"></div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>       
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer id="copyright">
         <div class="rodape">
             <p> &#169; 2023 - SENAI AAPM - Todos os direitos reservados-Segurança e privacidade </p>
         </div>
-        </footer>
+    </footer>
+    
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
